# iso15924.rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md
examples/: all.rs  get_by_alias.rs  get_by_code.rs  get_by_date_range.rs  get_by_name.rs  get_by_name_french.rs  get_by_num.rs
scripts/: pip-selfcheck.json  update.py
src/: codes.rs  lib.rs
tests/: lib.rs
