[package]
authors = ["Zeyla Hellyer <zeylahellyer@gmail.com>"]
description = "ISO 15924 data."
documentation = "http://docs.rs/iso15924"
homepage = "https://github.com/zeyla/iso15924.rs"
license = "ISC"
keywords = ["ISO", "15924"]
name = "iso15924"
readme = "README.md"
repository = "https://github.com/zeyla/gtld-data.rs.git"
version = "0.1.0"
